# plan529lab

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SPEC.md  background_information.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: methodology.md
examples/: aotc_overlap_case.yaml  base_case.yaml  generic_deduction_state.yaml  roth_rollover_case.yaml  scholarship_case.yaml  washington_no_income_tax.yaml
plan529lab/: __init__.py  __main__.py  api.py  cli.py  constants.py  exceptions.py
plan529lab/core/: __init__.py  breakeven.py  deterministic.py  engine.py  growth.py  monte_carlo.py  resolution.py  sensitivity.py
plan529lab/io/: __init__.py  json_loader.py  yaml_loader.py
plan529lab/models/: __init__.py  assumptions.py  config.py  contributions.py  education.py  monte_carlo.py  results.py  scenario.py  tax_profile.py
plan529lab/outputs/: __init__.py  explain.py  export.py  plots.py  tables.py
plan529lab/state_rules/: __init__.py  generic_credit.py  generic_deduction.py  no_income_tax.py
plan529lab/tax/: __init__.py  credits_coordination.py  federal_qtp.py  roth_rollover.py  state_base.py  state_registry.py  taxable_account.py
tests/: conftest.py  test_breakeven.py  test_cli.py  test_deterministic.py  test_growth.py  test_integration.py  test_io.py  test_models.py  test_monte_carlo.py  test_outputs.py  test_plots.py  test_properties.py  test_resolution.py  test_roth.py  test_sensitivity.py  test_state_rules.py  test_tax.py
