[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plan529lab"
version = "0.1.0"
description = "529 vs taxable brokerage after-tax tradeoff engine"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Engineer Investor", email = "egr.investor@gmail.com"},
]
keywords = ["529", "education-savings", "tax-analysis", "tax-planning", "qtp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "click>=8.1",
]

[project.scripts]
plan529lab = "plan529lab.cli:main"

[project.urls]
Homepage = "https://github.com/engineerinvestor/plan529lab"
Repository = "https://github.com/engineerinvestor/plan529lab"
Issues = "https://github.com/engineerinvestor/plan529lab/issues"
Documentation = "https://github.com/engineerinvestor/plan529lab/blob/main/docs/methodology.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pandas-stubs",
    "types-PyYAML",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["matplotlib.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
